source/stylesheets/_global.scss
body {
    text-align: center;
    /*
    Let's use System fonts for faster loading and consistent UI
    Medium did it first: https://medium.design/system-shock-6b1dc6d6596f#.hrsz463cl
    */
    font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
    font-size: $base-font-size;
    font-weight: 300;
    margin: 0;
    padding: 0;
    color: $off-black;
    word-break: break-all;
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    text-align: center;
}

.wrap {
    margin: 0 auto;
    max-width: $width-max;
    padding: 0 $margin;
}

blockquote {
    color: $quote-color;
    border-left: 0.25em solid #ddd;
    padding: 0 1em;
}

strong {
    font-weight: bold;
}

.dotted_link {
    text-decoration: none;
    color: $text-color;
    border-bottom: 1px dotted #ccc;

    &:hover,
    &:visited:hover {
        text-decoration: none;
        background-color: $grey-color-light;
        color: $text-color;
    }
}

.twitter-tweet {
    margin: 0 auto;
}

.btn-a {
    border: 1px solid white;
    display: inline-block;
    border-radius: 3px;
    padding: $a-padding ($a-padding - 0.05em);
    color: white;
    text-decoration: none;
    transition: color 0.1s linear;
    vertical-align: bottom;

    img {
        text-align: center;
        margin: 0 auto;
        vertical-align: bottom;
        display: block; //required to remove a weird margin on the bottom of img when nested within an anchor
    }

    &:hover {
        background: rgba(0,0,0,0.2);
        color: white;
        transition: all 0.15s linear;
    }
    @include media-query($on-laptop) {
        padding: $a-padding/2 ($a-padding/2 - 0.05em);
    }
}

a {
    color: $link-color;
    text-decoration: none;

    &:visited {
        color: $link-color;
    }

    &:hover {
        color: $text-color;
        text-decoration: underline;
        cursor: pointer; //needed for links with no href
    }
}

.row {
    width: 90%;
    margin: 6em auto;
}

.flex_row {
    // uses flexbox - https://css-tricks.com/snippets/css/a-guide-to-flexbox/
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
}

.icon {
    height: $icon-len;
    width: $icon-len;

    img {
        height: $icon-len;
        width: $icon-len;
    }
}

.small-icon {
    height: $small-icon-len;
    width: $small-icon-len;
}

.welcome {
    -webkit-animation-name: welcome;
    -webkit-animation-duration: 0.9s;
}
@-webkit-keyframes welcome {
    from {
        -webkit-transform: scale(0);
        opacity: 0;
    }

    50% {
        -webkit-transform: scale(0);
        opacity: 0;
    }

    82.5% {
        -webkit-transform: scale(1.03);
        -webkit-animation-timing-function: ease-out;
        opacity: 1;
    }

    to {
        -webkit-transform: scale(1);
    }
}

#mc_embed_signup{
    padding:5px;
    box-sizing: border-box;
}

